<resources>
    <string name="app_name">Plantilla</string>
    <string name="Porteros">Porteros</string>
    <string name="Defensas">Defensas</string>
    <string name="Mediocampistas">MedioCampistas</string>
    <string name="PantallaPrincipal">PantallaPrincipal</string>
    <string name="ImgEquipos">ImgEquipos</string>
    <string name="TxtEquipos">TxtEquipos</string>
    <string name="TxtBarcelona">Barcelona</string>
    <string name="ImgLigas">ImgLigas</string>
    <string name="ImgPosiciones">ImgPosiciones</string>
    <string name="RCVplantilla">RCVplantilla</string>
    <string name="Menu">MenudeNavegacion</string>
    <string name="TxtPlantilla">Plantilla</string>
    <string name="TxtPartidos">Partidos</string>
    <string name="TxtNoticias">Noticias</string>
    <string name="TxtLogo">CindePortes</string>

    <string-array name="Porteros">
        <item>Neto</item>
        <item>Marc Andre Ter Stegen</item>
    </string-array>

    <string-array name="Defensas">
        <item>Sergiño Dest</item>
        <item>Gerard Pique</item>
        <item>Clement Lenglet</item>
        <item>Jordi Alba</item>
    </string-array>

    <string-array name="MedioCampistas">
        <item>Frenkie de Jong</item>
        <item>Phelipe Coutinho</item>
        <item>Riqui Puig</item>
    </string-array>
</resources>