<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hola"
    android:orientation="vertical"
    tools:context=".actividades.MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingStart="125dp"
        android:text="@string/TxtLogo"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#B23A3737"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="127dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/TxtPlantilla"
            android:paddingTop="13dp"
            android:src="?attr/actionModePasteDrawable" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="142dp"
            android:layout_height="99dp"
            android:layout_weight="1"
            android:contentDescription="@string/TxtPartidos"
            android:paddingBottom="30dp"
            android:src="@drawable/pelotapng" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/TxtNoticias"
            android:paddingTop="14dp"
            android:src="@android:drawable/stat_notify_chat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B23A3737"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/TxtPlantilla"
            android:textColor="#FFFFFF"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TxtPartidos"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TxtNoticias"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:textColor="#FFFFFF"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:background="#B03A3737"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="116dp"
            android:layout_height="115dp"
            android:contentDescription="@string/TxtEquipos"
            app:srcCompat="@drawable/barca" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="161dp"
            android:layout_height="match_parent"
            android:text="La Liga: Santander  3 - 1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="132dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="La Liga: Santander"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="126dp"
            android:layout_height="115dp"
            android:contentDescription="@string/TxtPartidos"
            app:srcCompat="@drawable/madrid" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:background="#B23A3737"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Noticias de Ultima Hora"
            android:textColor="#FFFFFF"
            android:textSize="17dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:contentDescription="@string/TxtNoticias"
            app:srcCompat="@drawable/descargar" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="437dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Pique pide al barcelona que nombre Lionel Messi al nuevo estadio "
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="17dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="167dp"
            app:srcCompat="@drawable/olimpia" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:text="Olimpia vence al real de minas 3-2 y pone presion al motagua"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:gravity="start" />
    </LinearLayout>

</LinearLayout>